@@ -1,3 +1,8 @@
+######### 2014-4-11 ##########
+alter table shop_items_productlocation add column product_id int(11) NOT NULL;
+alter table shop_items_productlocation add column sku_id int(11);
+alter table shop_items_productlocation drop index outer_id;
+alter table shop_items_productlocation add unique key (product_id,sku_id,district_id);
 ######### 2014-3-27 ##########
 alter table shop_weixin_account add column jmenu varchar(1024) NOT NULL;
 ######### 2014-3-24 ##########
